added correct gif reference

--- a/connect4.css
+++ b/connect4.css
@@ -126,7 +126,7 @@ h1 {
   right: 0%;
   bottom: 0%;
   border-radius: 50%;
-  background: url("https://media1.giphy.com/media/5b9tbgErjE8I8Q7N7V/giphy.gif") 0 0;
+  background: url("./media/spaceShip4.gif") 0 0;
   background-size: contain;
   background-repeat: no-repeat;
   transition: 2s;
